* Separate out the LockOrderingGroup code so that we can use that without      including the rest of Lintel/PThread
LockOrderingGroup.hpp: new file.  Also makes scopeUp, scopeDown public, so 
  that others can use them.

CMakeLists.txt: install new file.

PThread.hpp.in: remove old lock ordering group code.  Add typedef to patch
  over the transition, add TODO to remove it.

--- a/include/Lintel/CMakeLists.txt
+++ b/include/Lintel/CMakeLists.txt
@@ -20,6 +20,7 @@ SET(INCLUDE_FILES
 	LintelAssert.hpp
 	LintelLog.hpp
 	LintelVersion.hpp
+	LockOrderingGroup.hpp
 	MathSpecialFunctions.hpp
 	Matrix.hpp
 	MersenneTwisterRandom.hpp
