* Begin cleanup on the work done during the FAST paper; this adds in      the Tuples and HashTupleStats stuff, but doesn't do the testing of it      because there was a lot of work in making the hash functions do the      right thing, which in this case is defined as not having to specify      both the T::operator () and the hash(T) variants of the same function.      That works and has a bunch of tests.
HashFns.hpp: the new header for hash functions, along with the magic to let
  it auto-select between various possible implementations.  A much simpler
  and more general auto-selection than the previous HashMap.hpp implementation.

HashTupleStats.hpp: the header for hash-map tuple stats that forms the 
  basis of the cube stuff.

Tuples.hpp: extentions to boost::tuples to do partial tuples and the like.

HashFns.cpp: move the BobJenkins stuff into here

hashfns.cpp: testing for HashFns

tuples.cpp: testing for Tuples (disabled)

COPYING: add another copyright callout for the BobJenkins code; it didn't 
  have the copyright phrase, so was missed in the first round.

include/Lintel/CMakeLists.txt: install the new headers

HashMap.hpp: remove most of the code dealing with HashFns from here,
   make the HashMap_hash structure depend on the lintel::Hash structure
   so everything still works.  Eventually need to deprecate HashMap_hash.

HashTable.hpp: Remove BobJenkins stuff, add various inline functions/
  #defines to make the namespaces the same; need to deprecate the global
  namespace bits.

src/CMakeLists.txt: add HashFns.cpp

HashTable.cpp: remove all the BobJenkins stuff, it went into HashFns.cpp

src/tests/CMakeLists.txt: add hashfns/tuples tests.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,6 +33,7 @@ SET(LIBLINTEL_SOURCES
 	ConstantString.cpp
 	Deque.cpp
 	Double.cpp
+	HashFns.cpp
 	HashTable.cpp
 	LeastSquares.cpp
 	LintelAssert.cpp
