* Oooh, look at all the pretty documentation.
batch-parallel.in: fix a typo found by podchecker, upgrade the bug from
  remarkably poor documentation to just incomplete documentation.

deptool.in: documentation is now complete, experience and reviews will
  tell what additional documentation needs to be written.  514 lines,
  3200 words including all the man page formatting bits.

--- a/src/batch-parallel.in
+++ b/src/batch-parallel.in
@@ -550,7 +550,7 @@ are installed in the two standard paths ~/.batch-parallel/modules and
 $BP_MODULES.
 
 =head2 Get usage information for a particular module
-  
+
   % batch-parallel <module> help
 
 This will provide whatever additional help a module has on it's particular
@@ -747,7 +747,7 @@ background.
 
 =head1 BUGS
 
-Remarkably poor documentation.
+Incomplete documentation
 
 =head1 AUTHOR
 
