* Continue work on cleanup of code from the StatsCube work in DataSeries.
hashtuplestats.cpp: test program for the HashTupleStats header file.  
  Currently disabled, discovered that tuples weren't tested.

HashFns.hpp: coding convention

HashTupleStats.hpp: make the class at least compile; move around the
  hash unique tuple stuff, add in a bunch of documentation for all of
  the functions.  Fixup memoryUsage() function to be a little more 
  correct.

Tuples.hpp: Fix to just use HashFns since HashMap's hashing is now
  deprecated.  Add more documentation on what's in the file.  Add in the
  PartialTuple bits, and rename them to BitsetAnyTuple, and switch
  used to any for parallel stucture with anytuples.  Improve the hash
  function to not use 0 for the "any" case since 0 is a pretty common
  value in variables.  Add an assign function to assign a tuple to an
  anytuple.

CMakeLists.txt: add new test.

hashfns.cpp: needed U after integer constant to eliminate warning

tuples.cpp: actually implement the test case; add a bunch of tests for
  < and hash for the three types of tuples.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -31,6 +31,7 @@ LINTEL_SIMPLE_TEST(stats_sequence)
 LINTEL_SIMPLE_TEST(deque)
 LINTEL_SIMPLE_TEST(hashfns)
 LINTEL_SIMPLE_TEST(tuples)
+LINTEL_SIMPLE_TEST(hashtuplestats)
 
 ################################## SPECIAL TEST PROGRAMS
 
