* Start integrating in and testing StatsCube    * Add safeRef function to pointerutil.
StatsCube.hpp: Cube operator from the dataseries hostinfo analysis.
  Lots of documentation added to it.  Some renames of functions, updated
  to match with HashTupleStats naming.

statscube.cpp: trivial test program, just verifies the header parses

HashTupleStats.hpp: move the statscube functions out of here and into
  StatsCube, move the newStats function to be a template in lintel::detail.

PointerUtil.hpp: add safeRef functions to verify before converting a
  pointer to a reference.

src/tests/CMakeLists.txt: add statscube test program

hashfns.cpp: add missing copyright header

hashtuplestats.cpp: add missing copyright header.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -32,6 +32,7 @@ LINTEL_SIMPLE_TEST(deque)
 LINTEL_SIMPLE_TEST(hashfns)
 LINTEL_SIMPLE_TEST(tuples)
 LINTEL_SIMPLE_TEST(hashtuplestats)
+LINTEL_SIMPLE_TEST(statscube)
 
 ################################## SPECIAL TEST PROGRAMS
 
