deptool.in: [BUGFIX] the patching part of code-review assumes you're   in the root source directory; make sure that is true.

--- a/src/deptool.in
+++ b/src/deptool.in
@@ -1407,6 +1407,8 @@ B<Note-bug:> renames currently confuse the code review tool.
 sub codeReview {
     my @revisions = @ARGV;
 
+    my $root_src_dir = rootSrcDir();
+    aliasChdir($root_src_dir);
     die "No revisions specified." if @revisions == 0;
 
     eval 'use File::Copy::Recursive "rcopy";';
