--- a/src/mercury-plot.in
+++ b/src/mercury-plot.in
@@ -116,6 +116,7 @@ sub plotwith;
 sub axplusb;
 sub default;
 sub fncmds;
+sub import_data;
 
 my $define_mode = 0;
 my @define;
@@ -243,6 +244,8 @@ sub docmd {
 	# ignore
     } elsif (/^man$/o) {
 	pod2usage(-verbose => 2, -exitval => 'NOEXIT');
+    } elsif (/^import-data\s+(\S.+)\s+--\s+(\S.+)$/o) {
+	import_data($1,$2);
     } else {
 	print "Unknown command '$_'; try help or man\n";
 	$command_error = 1;
@@ -339,35 +342,10 @@ sub helphistory {
 
 sub help {
     if (@_ > 0) {
-	$_ = shift;
-	if ($_ eq 'history') {
-	    helphistory;
-	} else {
-	    print "Don't have any help on '$_'; try just help\n";
-	}
-	return;
+	pod2usage(-verbose => 99, -sections => "COMMANDS/^$_[0]( .*)?\$", -exitval => 'NOEXIT');
+    } else {
+	pod2usage(-verbose => 2, -exitval => 'NOEXIT');
     }
-    print "select <sql select arguments>\n";
-    print "plot <sql select arguments>, with columns named x,{y,y2}, [yerr,(ylo,yhi)]\n";
-    print "sql <sql statement>\n";
-    print "listplot\n";
-    print "unplot [<plotnum>] \# no plotnum = all\n";
-    print "fnplot <function>\n";
-    print "barplot <sql select arguments>, with columns named major, [minor], y, [yerr, (ylo,yhi)]\n";
-    print "plotwith <plotnum|_ for latest,* for default> <with...>\n";
-    print "    # 'plotwith * undef' unsets the default plotwith.\n";
-    print "plottitle <plotnum|_ for latest> <title | notitle>\n";
-    print "axplusb <plotnum> \# Calculate (and graph) the best ax + b fit to the data\n";
-    print "default (table|where) <thing>\n";
-    print "psplot [--nocolor] [--mode={eps,portrait,landscape=default}] [--fontsize=<int>] <filename>\n";
-    print "pngplot {psplot args} <filename> [width height] \# default width=1024, height=768\n";
-    print "pngpsplot {psplot args} <base-filename> [width height] \# same as pngplot, but saves both .ps and .png versions of base-filename\n";
-    print "define ... enddefine \# Specify perl code to be evaluated\n";
-    print "source <filename> \# run commands from filename\n";
-    print "fncmds <code> # evaluate code, and execute the commands returned by it.\n";
-    print "help [history]\n";
-    print "man \# Print the manual\n";
-    print "exit or quit\n";
 }
 
 
@@ -1194,6 +1172,99 @@ sub fncmds {
     }
 }
 
+sub import_data {
+    my ($columns, $files) = @_;
+
+    my @columns = split(/\s+/o, $columns);
+    my @files = split(/\s+/o, $files);
+
+    if (@columns < 2 || @files < 1) {
+	die "Missing table name, columns or files arguments";
+    }
+
+    foreach my $column (@columns) { 
+	die "Bad column name $column" unless $column =~ /^\w+$/o;
+    }
+    my $table_name = shift @columns;
+    foreach my $file (@files) {
+	die "$file isn't readable" unless -r $file;
+    }
+
+    my %types;
+    map { $types{$_} = { } } @columns;
+    foreach my $file (@files) {
+	my $fh = new FileHandle $file or die "Can't open $file for read: $!";
+	while(<$fh>) {
+	    chomp;
+	    my @parts = split(/\s+/o);
+	    die "Mismatch on column count in file $file, line: $_"
+		unless @parts == @columns;
+	    for (my $i=0; $i < @parts; ++$i) {
+		my $column = $columns[$i];
+		if ($parts[$i] =~ /^\d+$/o) { 
+		    $types{$column}->{bigint} = $parts[$i];
+		} elsif ($parts[$i] =~ /^\d+\.\d+$/o) {
+		    $types{$column}->{double} = $parts[$i];
+		} elsif (length $parts[$i] < 256) {
+		    $types{$column}->{varchar} = $parts[$i];
+		} else {
+		    $types{$column}->{longtext} = $parts[$i];
+		}
+	    }
+	}
+	close($fh);
+    }
+
+    my @sql_columns;
+    foreach my $column (@columns) {
+	if (defined $types{$column}->{longtext}) {
+	    print "$column: inferred longtext type from $types{$column}->{longtext}\n";
+	    $types{$column} = 'text';
+	    push(@sql_columns, "$column longtext not null");
+	} elsif (defined $types{$column}->{varchar}) {
+	    print "$column: inferred varchar type from $types{$column}->{varchar}\n";
+	    $types{$column} = 'varchar';
+	    push(@sql_columns, "$column varchar(255) not null");
+	} elsif (defined $types{$column}->{double}) {
+	    print "$column: inferred double type from $types{$column}->{double}\n";
+	    $types{$column} = 'double';
+	    push(@sql_columns, "$column double not null");
+	} elsif (defined $types{$column}->{bigint}) {
+	    print "$column: inferred bigint type from $types{$column}->{bigint}\n";
+	    $types{$column} = 'bigint';
+	    push(@sql_columns, "$column bigint not null");
+	} else {
+	    die "no type for $column";
+	}
+    }
+
+    my $drop = "drop table if exists $table_name";
+    print "$drop\n";
+    sql_exec($drop);
+
+    my $create = "create table $table_name (" . join(", ", @sql_columns) . ")";
+    print "$create\n";
+    sql_exec($create);
+
+    my $insert = "insert into $table_name values (" . join(", ", map { "?" } @columns) . ")";
+    print "$insert\n";
+    my $sth = sql_prepare($insert);
+    my $row_count = 0;
+    foreach my $file (@files) {
+	my $fh = new FileHandle $file or die "Can't open $file for read: $!";
+	while(<$fh>) {
+	    ++$row_count;
+	    chomp;
+	    my @parts = split(/\s+/o);
+	    my $rc = eval { $sth->execute(@parts); };
+	    die "insert failed: $@" if $@;
+	    die "insert failed: $rc" unless $rc == 1;
+	}
+	close($fh);
+    }
+    print "imported $row_count rows\n";
+}
+
 __END__
 
 =pod
@@ -1208,7 +1279,31 @@ mercury-plot - plot data out of an SQL database
                [--user=<user>] [--password=<password>]
                [--history=<history filename>]
 
-=head1 MERCURY COMMANDS
+=head1 OVERVIEW
+
+    select <sql select arguments>
+    plot <sql select arguments>, with columns named x,{y,y2}, [yerr,(ylo,yhi)]
+    sql <sql statement>
+    listplot
+    unplot [<plotnum>] 
+    fnplot <function>
+    barplot <sql select arguments>, with columns named major, [minor], y, [yerr, (ylo,yhi)]
+    plotwith <plotnum|_ for latest,* for default> <with...>
+    plottitle <plotnum|_ for latest> <title | notitle>
+    axplusb <plotnum> 
+    default (table|where) <thing>
+    psplot [--nocolor] [--mode={eps,portrait,landscape=default}] [--fontsize=<int>] <filename>
+    pngplot {psplot args} <filename> [width height] 
+    pngpsplot {psplot args} <base-filename> [width height] 
+    define ... enddefine 
+    source <filename> 
+    fncmds <code> 
+    import-data I<tablename> I<columns> ... -- I<files> ...
+    help [I<command>]
+    man 
+    exit or quit
+
+=head1 COMMANDS
 
 Inside of a file for input to mercury, or typed in at the mercury prompt:
 
@@ -1343,6 +1438,12 @@ Calls a function that was defined by the user in a define
 ... enddefine block.  While you can define functions that have the
 same name as the built in commands since mercury-plot can tell the
 difference by the (), you probably shouldn't, it would be confusing.
+
+=head2 import-data I<table-name> I<column-name> ... -- I<filename> ...
+
+Imports the data from the specified filenames into SQL, assumes that
+the original data is space separated.  Auto infers column types of
+bigint, double, varchar(255), longtext from the contents of the files.
 
 =head1 TODO
 
