* Complete the work on implementing and fixing StatsCube.
CMakeConfig.txt: add TODO

LintelFind.cmake: add TODO

include/Lintel/CMakeLists.txt: install StatsCube.hpp

HashTupleStats.hpp: add option to explicitly count zero entries, 
  remove some debugging stuff.

LintelLog.hpp: fixup doxygen comments

StatsCube.hpp: finish implementation, lots of changes as a result
  of the switchover in naming from partial to any.  Some minor cleanups
  in the way the function hooks are defined.  Add option to count 
  zeroes in zeroCube.

StatsQuantile.hpp: fixups for doxygen

Tuples.hpp: add opeartions to print out bitset any tuples.

statscube.cpp: implement the regression test; wrote a separate
  program to calculate the reference data.

--- a/include/Lintel/CMakeLists.txt
+++ b/include/Lintel/CMakeLists.txt
@@ -32,6 +32,7 @@ SET(INCLUDE_FILES
 	RotatingHashMap.hpp
 	SimpleMutex.hpp
 	Stats.hpp
+	StatsCube.hpp
 	StatsEMA.hpp
 	StatsHistogram.hpp
 	StatsMaker.hpp
