* Add support for generic program options to Lintel, allows you      to just specify the options in .cpp files and have them handled      by each sub-part of a program as appropriate.    * Factor out the macro bits that would select an optional bit of      the boost libraries.
ProgramOptions.hpp: program options header

ProgramOptions.cpp: few functions and globals

program_options.cpp: test program

program_options.help.ref: reference data for program options called
  with -h

run-check-program-options.sh: test program that verifies everything is
  working correctly.

CMakeConfig.txt: Use new boost macro to select for boost threads and
  boost program options.

LintelFind.cmake: document the LINTEL_FIND_LIBRARY_CMAKE_INCLUDE_FILE
  macro at top of file, add LINTEL_BOOST_EXTRA macro that deals with
  finding optional portions of boost.

include/Lintel/CMakeLists.txt: add program options header

src/CMakeLists.txt: add program options cpp

src/tests/CMakeLists.txt: add program options test.

--- a/include/Lintel/CMakeLists.txt
+++ b/include/Lintel/CMakeLists.txt
@@ -92,6 +92,9 @@ IF(LIBXML2_ENABLED)
     LIST(APPEND INCLUDE_FILES LintelLogXML.hpp XMLUtil.hpp)
 ENDIF(LIBXML2_ENABLED)
 
+IF(BOOST_PROGRAM_OPTIONS_ENABLED)
+    LIST(APPEND INCLUDE_FILES ProgramOptions.hpp)
+ENDIF(BOOST_PROGRAM_OPTIONS_ENABLED)
 
 ################################## INSTALL
 
