--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -107,6 +107,11 @@ IF(LATEX_ENABLED)
     LINTEL_INSTALL_CONFIG_PROGRAM(lintel-latex-rebuild)
 ENDIF(LATEX_ENABLED)
 
+IF(BOOST_PROGRAM_OPTIONS_ENABLED)
+    LIST(APPEND LINTEL_FEATURES program-options)
+    LIST(APPEND LIBLINTEL_SOURCES ProgramOptions.cpp)
+ENDIF(BOOST_PROGRAM_OPTIONS_ENABLED)
+
 ################################## LIBRARY
 
 ADD_LIBRARY(Lintel ${LIBRARY_TYPE} ${LIBLINTEL_SOURCES})
@@ -126,6 +131,10 @@ ENDIF(THREADS_ENABLED)
 IF(LIBXML2_ENABLED)
     TARGET_LINK_LIBRARIES(Lintel ${LIBXML2_LIBRARIES})
 ENDIF(LIBXML2_ENABLED)
+
+IF(BOOST_PROGRAM_OPTIONS_ENABLED)
+    TARGET_LINK_LIBRARIES(Lintel ${BOOST_PROGRAM_OPTIONS_LIBRARIES})
+ENDIF(BOOST_PROGRAM_OPTIONS_ENABLED)
 
 ################################## INSTALL
 
