* Optimize StatsQuantile so that add runs roughly 1.5x faster than      before.    * Add PriorityQueue testing since we added some new methods.
priority_queue.cpp: new test program, mostly verifies against the STL
  priority queue, but for the replaceTop() routine, just verifies
  against itself.

PriorityQueue.hpp: Add replaceTop() operation, it is equivalent to
  pop() + push(), but is about 2x as efficient since it only has
  to find the right place for 1 value (the replacement) rather than
  2 (the new top after pop and the new value)

StatsQuantile.?pp: Use the new replaceTop() operation in collapse, 
  experimented with a couple of implementations, the one present
  was the fastest with a little discussion of the alternative
  priority queue attempt.  Added TODO to make the same optimization
  in getQuantile()

src/CMakeLists.txt: make sure to turn on -DDEBUG if we are in Debug
  mode builds.

src/tests/CMakeLists.txt: add priority_queue test

stats_quantile.cpp: change signedness to remove warning.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,7 +13,10 @@ INCLUDE_DIRECTORIES(
 	)
 
 ADD_DEFINITIONS(-DLIBLINTEL_VERSION="\\"${LINTEL_VERSION}\\"")
-
+IF(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
+    ADD_DEFINITIONS(-DDEBUG)
+ENDIF(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
+		       
 IF(CMAKE_COMPILER_IS_GNUCXX)
     ADD_DEFINITIONS(-Wall)
 ENDIF(CMAKE_COMPILER_IS_GNUCXX)
