--- a/src/lintel-latex-rebuild.in
+++ b/src/lintel-latex-rebuild.in
@@ -89,15 +89,19 @@ done
 dvips_err=0
 dvipdf_err=0
 if [ $latex_err = 0 -a $bibtex_err = 0 ]; then
-    @DVIPS_CONVERTER@ -tletter -o$TEXFILE.ps $TEXFILE.dvi >>$TEXFILE.rebuild.out 2>&1
+    @DVIPS_CONVERTER@ -tletter -o$TEXFILE.ps.tmp $TEXFILE.dvi >>$TEXFILE.rebuild.out 2>&1
     dvips_err=$?
-    #Why not run dvipdf?  The current version of dvipdf defaults to A4 paper
-    #and doesn't pass options to dvips (the underlying engine for dvipdf).
-    #so we call dvips and ps2pdf14 directly.
+    # Make .ps file creation atomic
+    [ $dvips_err = 0 ] && mv $TEXFILE.ps.tmp $TEXFILE.ps
+    # Why not run dvipdf?  The current version of dvipdf defaults to A4 paper
+    # and doesn't pass options to dvips (the underlying engine for dvipdf).
+    # so we call dvips and ps2pdf14 directly.
     @DVIPS_CONVERTER@ -Ppdf -G0 -t letter -o $TEXFILE.pdftemp $TEXFILE.dvi >>$TEXFILE.rebuild.out 2>&1
     dvipstemp_err=$?
-    @PS2PDF14_CONVERTER@ $TEXFILE.pdftemp $TEXFILE.pdf >>$TEXFILE.rebuild.out 2>&1
+    @PS2PDF14_CONVERTER@ $TEXFILE.pdftemp $TEXFILE.pdf14tmp >>$TEXFILE.rebuild.out 2>&1
     ps2pdf14_err=$?
+    # make .pdf file creation atomic.
+    [ $ps2pdf14_err = 0 ] && mv $TEXFILE.pdf14tmp $TEXFILE.pdf
 fi
 
 if [ $latex_err != 0 ]; then
