--- a/src/lintel-latex-rebuild.in
+++ b/src/lintel-latex-rebuild.in
@@ -101,7 +101,10 @@ if [ $latex_err = 0 -a $bibtex_err = 0 ]; then
     @PS2PDF14_CONVERTER@ $TEXFILE.pdftemp $TEXFILE.pdf14tmp >>$TEXFILE.rebuild.out 2>&1
     ps2pdf14_err=$?
     # make .pdf file creation atomic.
-    [ $ps2pdf14_err = 0 ] && mv $TEXFILE.pdf14tmp $TEXFILE.pdf
+    if [ $ps2pdf14_err = 0 ]; then
+	mv $TEXFILE.pdf14tmp $TEXFILE.pdf
+        rm $TEXFILE.pdftemp
+    fi
 fi
 
 if [ $latex_err != 0 ]; then
@@ -122,14 +125,14 @@ if [ "$any_err" = "" ]; then
     echo "--------- Warnings for $TEXFILE ----------"
     echo "Full log file is $TEXFILE.rebuild.out"
     echo "Successful latex rebuild." 
-exit 0
+    exit 0
 else 
     echo "--------- ERROR in $TEXFILE -----------"
     tail -50 $TEXFILE.rebuild.out
     echo "--------- ERROR in $TEXFILE -----------"
     echo "Full log file is $TEXFILE.rebuild.out"
     echo "$any_err failed, removing $TEXFILE.{dvi,ps,pdf} files"
-    rm $TEXFILE.dvi $TEXFILE.ps $TEXFILE.pdf $TEXFILE.pdftemp
+    rm $TEXFILE.dvi $TEXFILE.ps $TEXFILE.pdf 
     exit 1
 fi
 
